--- a/app/src/main/res/layout/cat_item.xml
+++ b/app/src/main/res/layout/cat_item.xml
@@ -7,16 +7,24 @@
     <ImageView
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:id="@+id/imageViewId" android:layout_marginTop="4dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/imageViewId"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="4dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewId" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toEndOf="@+id/imageViewId" android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@android:color/black" android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/textViewId"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageViewId"
+            android:layout_marginStart="16dp"
+            android:textColor="@android:color/black"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
